--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-03T01:19:02.914016300Z",
-     "start_time": "2023-06-03T01:19:02.905817300Z"
+     "end_time": "2023-06-05T18:02:20.572152825Z",
+     "start_time": "2023-06-05T18:02:20.566438934Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-03T01:19:03.425349500Z",
-     "start_time": "2023-06-03T01:19:02.915017800Z"
+     "end_time": "2023-06-05T18:02:20.684131768Z",
+     "start_time": "2023-06-05T18:02:20.569901775Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-03T01:19:03.443218800Z",
-     "start_time": "2023-06-03T01:19:03.430936700Z"
+     "end_time": "2023-06-05T18:02:20.694676115Z",
+     "start_time": "2023-06-05T18:02:20.690734107Z"
     }
    },
    "outputs": [],
@@ -88,6 +88,10 @@
     "        # Try and get an item from the queue.\n",
     "        try:\n",
     "            in_item = await self.inputs.queues[\"main_input\"].get_async()\n",
+    "\n",
+    "            if in_item == 0:\n",
+    "                self.loop_event.clear()\n",
+    "                return\n",
     "        except InterruptedError:\n",
     "            return  # If interrupted, skip this loop of the task.\n",
     "\n",
@@ -118,8 +122,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-03T01:19:12.401379600Z",
-     "start_time": "2023-06-03T01:19:03.446721200Z"
+     "end_time": "2023-06-05T18:02:24.778841071Z",
+     "start_time": "2023-06-05T18:02:20.701729306Z"
     }
    },
    "outputs": [
@@ -127,27 +131,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18:23:00: Setup event is False\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 9\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime\u001B[38;5;241m.\u001B[39mstrftime(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mH:\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mM:\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mS\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;250m \u001B[39mtime\u001B[38;5;241m.\u001B[39mlocaltime())\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m: Setup event is \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtask\u001B[38;5;241m.\u001B[39moutputs\u001B[38;5;241m.\u001B[39mevents[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msetup_check\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mis_set()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      8\u001B[0m task\u001B[38;5;241m.\u001B[39mstart()  \u001B[38;5;66;03m# Will continuously execute the task until its stop method is called from any process.\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m \u001B[43mtask\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43moutputs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mevents\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43msetup_check\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mwait\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtime\u001B[38;5;241m.\u001B[39mstrftime(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mH:\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mM:\u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124mS\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;250m \u001B[39mtime\u001B[38;5;241m.\u001B[39mlocaltime())\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m: Setup event is \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtask\u001B[38;5;241m.\u001B[39moutputs\u001B[38;5;241m.\u001B[39mevents[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msetup_check\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mis_set()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     14\u001B[0m \u001B[38;5;66;03m# Put some data on the queue and let the TaskBlock process it\u001B[39;00m\n",
-      "File \u001B[1;32mY:\\Libraries\\Projects\\Python\\python-taskblocks\\src\\taskblocks\\io\\synchronize\\asyncevent.py:68\u001B[0m, in \u001B[0;36mAsyncEvent.wait\u001B[1;34m(self, timeout)\u001B[0m\n\u001B[0;32m     56\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Waits for the Event to be changed to set.\u001B[39;00m\n\u001B[0;32m     57\u001B[0m \n\u001B[0;32m     58\u001B[0m \u001B[38;5;124;03mArgs:\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     65\u001B[0m \u001B[38;5;124;03m    InterruptedError: When this method is interrupted by an interrupt event.\u001B[39;00m\n\u001B[0;32m     66\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m     67\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m timeout \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m---> 68\u001B[0m     \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhold_interrupt\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mis_set\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m:\n\u001B[0;32m     69\u001B[0m         \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_cond:\n\u001B[0;32m     70\u001B[0m             \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_flag\u001B[38;5;241m.\u001B[39macquire(\u001B[38;5;28;01mFalse\u001B[39;00m):\n",
-      "File \u001B[1;32mC:\\Program Files\\Python310\\lib\\multiprocessing\\synchronize.py:329\u001B[0m, in \u001B[0;36mEvent.is_set\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    327\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mis_set\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[0;32m    328\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_cond:\n\u001B[1;32m--> 329\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_flag\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43macquire\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m:\n\u001B[0;32m    330\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_flag\u001B[38;5;241m.\u001B[39mrelease()\n\u001B[0;32m    331\u001B[0m             \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+      "11:02:20.699423: Setup event is False\n",
+      "11:02:20.743160: Received 1 in task\n",
+      "11:02:20.740905: Setup event is True\n",
+      "\n",
+      "11:02:20.741170: Putting items on the queue\n",
+      "11:02:20.743187: Items on the queue\n",
+      "11:02:20.743288: Waiting for results\n",
+      "11:02:22.749402: Received 2 in task\n",
+      "11:02:22.751237: 2 was returned from the TaskBlock\n",
+      "11:02:24.771335: 3 was returned from the TaskBlock\n",
+      "\n",
+      "11:02:24.771459: Teardown event is False\n",
+      "11:02:24.771985: Teardown event is True\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Create TaskBlock object\n",
-    "task = ExampleTaskBlock(is_process=True)\n",
-    "\n",
+    "task = [None] * 4\n",
+    "input_q = AsyncQueue()\n",
+    "output_q = AsyncQueue()\n",
+    "for i in range(4):\n",
+    "    task[i] = t = ExampleTaskBlock(is_process=True)\n",
+    "    t.inputs.queues[\"main_input\"] = input_q\n",
+    "    t.outputs.queues[\"main_output\"] = output_q\n",
     "\n",
     "# Start TaskBlock in separate process and print when setup is complete\n",
     "print(f\"{datetime.now().strftime('%H:%M:%S.%f')}: Setup event is {task.outputs.events['setup_check'].is_set()}\")\n",
@@ -183,8 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-05T18:02:24.792830177Z",
+     "start_time": "2023-06-05T18:02:24.782718416Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
